tests/rustdoc-ui/doc-cfg.stderr
error[E0805]: malformed `doc` attribute input
  --> $DIR/doc-cfg.rs:4:1
   |
LL | #[doc(cfg(), cfg(foo, bar))]
   | ^^^^^^^^^--^^^^^^^^^^^^^^^^^
   |          |
   |          expected an argument here
   |
help: if the function should be disabled, use `#[cfg(false)]`
   |
LL | #[doc(cfg(false), cfg(foo, bar))]
   |           +++++

error[E0805]: malformed `doc` attribute input
  --> $DIR/doc-cfg.rs:4:1
   |
LL | #[doc(cfg(), cfg(foo, bar))]
   | ^^^^^^^^^^^^^^^^----------^^
   |                 |
   |                 expected a single argument here
   |
help: if the function should be enabled when all these predicates are, wrap them in `all`
   |
LL - #[doc(cfg(), cfg(foo, bar))]
LL + #[doc(cfg(), cfg(all(foo, bar)))]
   |
help: alternately, if the function should be enabled when any of these predicates are, wrap them in `any`
   |
LL - #[doc(cfg(), cfg(foo, bar))]
LL + #[doc(cfg(), cfg(any(foo, bar)))]
   |

error[E0805]: malformed `doc` attribute input
  --> $DIR/doc-cfg.rs:7:1
   |
LL | #[doc(cfg())]
   | ^^^^^^^^^--^^
   |          |
   |          expected an argument here
   |
help: if the function should be disabled, use `#[cfg(false)]`
   |
LL | #[doc(cfg(false))]
   |           +++++

error[E0805]: malformed `doc` attribute input
  --> $DIR/doc-cfg.rs:8:1
   |
LL | #[doc(cfg(foo, bar))]
   | ^^^^^^^^^----------^^
   |          |
   |          expected a single argument here
   |
help: if the function should be enabled when all these predicates are, wrap them in `all`
   |
LL - #[doc(cfg(foo, bar))]
LL + #[doc(cfg(all(foo, bar)))]
   |
help: alternately, if the function should be enabled when any of these predicates are, wrap them in `any`
   |
LL - #[doc(cfg(foo, bar))]
LL + #[doc(cfg(any(foo, bar)))]
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0805`.
